--- a/assets/main.scss
+++ b/assets/main.scss
@@ -4,6 +4,14 @@
 
 @import "{{ site.theme }}";
 
+body {
+        font-family: "Libertinus Serif", serif;
+}
+
+h1, h2, h3, h4 {
+        font-family: "Libertinus Sans", sans-serif;
+}
+
 .post img {
         display: block;
         border:1px solid #021a40;
