--- a/assets/main.scss
+++ b/assets/main.scss
@@ -4,7 +4,7 @@
 
 @import "{{ site.theme }}";
 
-body {
+.post p {
         font-family: "Libertinus Serif", serif !important;
         hyphens: auto;
 }
