--- a/assets/main.scss
+++ b/assets/main.scss
@@ -9,7 +9,7 @@
         hyphens: auto;
 }
 
-h1, h2, h3, h4 {
+.post h1, h2, h3, h4 {
         font-family: "Libertinus Sans", sans-serif !important;
 }
 
