--- a/assets/main.scss
+++ b/assets/main.scss
@@ -13,6 +13,10 @@
         font-family: "Libertinus Sans", sans-serif !important;
 }
 
+.post body {
+        background-color: rgb(255, 241, 229) !important;
+}
+
 .footnotes::before {
         display: block;
         content: "Footnotes:";
