--- a/assets/main.scss
+++ b/assets/main.scss
@@ -13,7 +13,7 @@
         font-family: "Libertinus Sans", sans-serif !important;
 }
 
-.site-header, .post-content {
+.site-header, .page-content, .site-footer {
         background-color: rgb(255, 241, 229) !important;
 }
 
