--- a/assets/main.scss
+++ b/assets/main.scss
@@ -17,7 +17,7 @@
         background-color: rgb(255, 241, 229) !important;
 }
 
-.site-header {
+header .site-header {
         border-top: 5px solid black !important;
         border-bottom: 1px solid black !important;
 }
