--- a/assets/main.scss
+++ b/assets/main.scss
@@ -4,12 +4,7 @@
 
 @import "{{ site.theme }}";
 
-.post p, a {
-        font-family: "Libertinus Serif", serif !important;
-        hyphens: auto;
-}
-
-.home p, a {
+.post p, .post a, .home p, .home a {
         font-family: "Libertinus Serif", serif !important;
         hyphens: auto;
 }
