--- a/assets/main.scss
+++ b/assets/main.scss
@@ -9,6 +9,11 @@
         hyphens: auto;
 }
 
+ul > li {
+        font-family: "Libertinus Serif", serif !important;
+        hyphens: auto;
+}
+
 .site-title {
         font-family: "Libertinus Serif", serif !important;
 }
