--- a/assets/main.scss
+++ b/assets/main.scss
@@ -9,7 +9,7 @@
         hyphens: auto;
 }
 
-ul > li {
+ul > li, ol > li {
         font-family: "Libertinus Serif", serif !important;
         hyphens: auto;
 }
