--- a/assets/main.scss
+++ b/assets/main.scss
@@ -14,7 +14,7 @@ ul > li, ol > li {
         hyphens: auto;
 }
 
-.language-plaintext code {
+.language-plaintext {
         font-family: "Libertinus Mono", monospace !important;
 }
 
