--- a/assets/main.scss
+++ b/assets/main.scss
@@ -14,7 +14,7 @@ ul > li, ol > li {
         hyphens: auto;
 }
 
-.language-plaintext, .highlight {
+.language-plaintext, .highlight, tt, code, samp {
         font-family: "Libertinus Mono", monospace !important;
 }
 
