--- a/assets/main.scss
+++ b/assets/main.scss
@@ -39,7 +39,7 @@ footer.site-footer:before {
         content: '';
         display: inherit;
         width: 60%;
-        margin: 30px auto;
+        margin: -30px auto 30px;
         border-bottom: 1px solid #262a33 !important;
 }
 footer.site-footer {
