--- a/assets/main.scss
+++ b/assets/main.scss
@@ -9,6 +9,13 @@
         hyphens: auto;
 }
 
+a {
+        color: black;
+}
+a:after {
+        content: "\FEFF°";
+}
+
 ul > li, ol > li {
         font-family: "Libertinus Serif", serif !important;
         hyphens: auto;
