--- a/assets/main.scss
+++ b/assets/main.scss
@@ -14,7 +14,7 @@ a {
 }
 a:after {
         content: "\FEFF°";
-        color: rgb(255, 241, 229);
+        color: #262a33;
 }
 
 ul > li, ol > li {
