--- a/assets/main.scss
+++ b/assets/main.scss
@@ -35,7 +35,7 @@ ul > li, ol > li {
         font-family: "Libertinus Serif", serif !important;
 }
 
-.post h1, h2, h3, h4 {
+.post h1, h2, h3, h4, .page-heading {
         font-family: "Libertinus Sans", sans-serif !important;
 }
 
