--- a/assets/main.scss
+++ b/assets/main.scss
@@ -30,7 +30,7 @@ ul > li, ol > li {
 .language-plaintext, .highlight, tt, code, samp {
         font-family: "Libertinus Mono", monospace !important;
         border: none;
-        background-color: rgb(255, 241, 229);
+        background-color: rgb(255, 241, 229) !important;
 }
 
 .site-title {
