--- a/assets/main.scss
+++ b/assets/main.scss
@@ -27,7 +27,7 @@ ul > li, ol > li {
         hyphens: auto;
 }
 
-.language-plaintext, .highlight, tt, code, samp, .language-plaintext pre.highlight  {
+.language-plaintext, .highlight, tt, code, samp {
         font-family: "Libertinus Mono", monospace !important;
         border: none;
         background-color: rgb(255, 241, 229) !important;
