--- a/assets/main.scss
+++ b/assets/main.scss
@@ -32,6 +32,9 @@ ul > li, ol > li {
         border: none;
         background-color: rgb(255, 241, 229) !important;
 }
+code {
+        padding: 1px !important;
+}
 
 .site-title {
         font-family: "Libertinus Serif", serif !important;
