--- a/assets/main.scss
+++ b/assets/main.scss
@@ -35,6 +35,7 @@ ul > li, ol > li {
 code {
         padding: 0px !important;
         padding-left: -1px !important;
+        padding-right: 2px !important;
 }
 
 .site-title {
