--- a/assets/main.scss
+++ b/assets/main.scss
@@ -102,7 +102,7 @@ footer > .footer-col-wrapper {
   color: light-grey;
 }
 
-.language-python { border-left: 1px solid lightcoral; }
+.language-python { border-left: 1px solid grey; }
 
 .language-python + .language-plaintext {
         border-left: 1px solid grey;
