--- a/assets/main.scss
+++ b/assets/main.scss
@@ -32,11 +32,11 @@ ul > li, ol > li {
         border: none;
         background-color: rgb(255, 241, 229) !important;
 }
-code {
+/*code {
         padding: 0px !important;
         padding-left: -1px !important;
         padding-right: 2px !important;
-}
+}*/
 
 .site-title {
         font-family: "Libertinus Serif", serif !important;
