--- a/assets/main.scss
+++ b/assets/main.scss
@@ -21,6 +21,9 @@ a:hover {
         color: #262a33 !important;
         text-decoration: none !important;
 }
+a.post-link {
+        margin-left: 0em;
+}
 
 ul > li, ol > li {
         font-family: "Libertinus Serif", serif !important;
