--- a/assets/main.scss
+++ b/assets/main.scss
@@ -21,7 +21,7 @@ a:hover {
         color: #262a33 !important;
         text-decoration: none !important;
 }
-a.post-link {
+a.post-link:after {
         margin-left: 0em;
 }
 
